--- a/meat-website/angular.json
+++ b/meat-website/angular.json
@@ -55,13 +55,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
-            "fileReplacements": [
-              {
-                "replace": "src/environments/environment.ts",
-                "with": "src/environments/environment.prod.ts"
-              }
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -73,8 +67,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "10kb",
-                  "maximumError": "15kb"
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
                 }
               ],
               "outputHashing": "all"
