Enhance .gitignore files for backend and frontend; update CORS settings in backend index.js for production; refactor API URLs in Angular services to use environment variables; improve README with Vercel deployment instructions and environment configuration details.

--- a/meat-website/.gitignore
+++ b/meat-website/.gitignore
@@ -37,7 +37,15 @@ yarn-error.log
 testem.log
 /typings
 
-# System files
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
 .DS_Store
 Thumbs.db
-.vercel
+
+# Environment files
+.env
+.env.local
+.env.production
