--- a/meat-website/vercel.json
+++ b/meat-website/vercel.json
@@ -5,7 +5,8 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist/meat-website"
+        "distDir": "dist/meat-website",
+        "buildCommand": "npm run build"
       }
     }
   ],
