Remove README and Vercel configuration files for both backend and frontend; update CORS settings in backend index.js for local development; refactor API URLs in Angular services to use hardcoded local URLs; enhance Angular build configuration by removing Bootstrap dependencies and adjusting size limits for component styles.

--- a/meat-website/.gitignore
+++ b/meat-website/.gitignore
@@ -37,15 +37,7 @@ yarn-error.log
 testem.log
 /typings
 
-# e2e
-/e2e/*.js
-/e2e/*.map
-
-# System Files
+# System files
 .DS_Store
 Thumbs.db
-
-# Environment files
-.env
-.env.local
-.env.production
+.vercel
